--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -15,6 +15,17 @@ http {
 	server {
 		listen 5002;
 		location / {
+			proxy_pass http://registrar.api;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection '';
+			proxy_set_header Host $host;
+			proxy_cache_bypass $http_upgrade;
+		}
+	}
+	server {
+		listen 5003;
+		location / {
 			proxy_pass http://angularspa;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
