--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -34,6 +34,17 @@ http {
 			proxy_cache_bypass $http_upgrade;
 		}
 	}
+	server {
+		listen 5004;
+		location / {
+			proxy_pass http://auth.api;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection '';
+			proxy_set_header Host $host;
+			proxy_cache_bypass $http_upgrade;
+		}
+	}
 	proxy_connect_timeout 50000;
     proxy_read_timeout 50000;
     proxy_send_timeout 50000;
