--- a/Services/Auth/AuthApi/AuthApi.csproj
+++ b/Services/Auth/AuthApi/AuthApi.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="MySql.Data" Version="8.0.15" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\Helpers\Helpers.csproj" />
+  </ItemGroup>
+
 </Project>
