--- a/Services/Auth/AuthApi/Dockerfile
+++ b/Services/Auth/AuthApi/Dockerfile
@@ -6,11 +6,11 @@ ENV ASPNETCORE_URLS http://*:80
 FROM microsoft/dotnet:2.2-sdk AS build
 WORKDIR /src
 COPY . .
-WORKDIR "/src/Services/Auth/AuthApi"
-RUN dotnet build "AuthApi.csproj" -c Release -o /app
+WORKDIR /src/Services/Auth/AuthApi
+RUN dotnet build AuthApi.csproj -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "AuthApi.csproj" -c Release -o /app
+RUN dotnet publish AuthApi.csproj -c Release -o /app
 
 FROM base AS final
 WORKDIR /app
