--- a/Services/Personnel/Personnel.Api/Personnel.Api.csproj
+++ b/Services/Personnel/Personnel.Api/Personnel.Api.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="2.2.2" />
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.1.3" />
     <PackageReference Include="MediatR" Version="6.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="6.0.1" />
@@ -21,6 +23,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Events\EventBusRabbitMQ\EventBusRabbitMQ.csproj" />
+    <ProjectReference Include="..\..\..\Common\Helpers\Helpers.csproj" />
+    <ProjectReference Include="..\Personnel.Infrastructure\Personnel.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
