--- a/Services/Personnel/Personnel.Domain/Personnel.Domain.csproj
+++ b/Services/Personnel/Personnel.Domain/Personnel.Domain.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="6.0.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
