--- a/WebApps/AngularSPA/Client/package.json
+++ b/WebApps/AngularSPA/Client/package.json
@@ -20,7 +20,6 @@
     "@angular/core": "^7.1.4",
     "@angular/forms": "^7.1.4",
     "@angular/http": "^7.1.4",
-    "@angular/material": "^7.2.0",
     "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "^7.1.4",
     "@angular/router": "^7.1.4",
@@ -30,10 +29,13 @@
     "@ngrx/store": "^7.0.0",
     "@types/lodash": "^4.14.119",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "ngrx-store-freeze": "^0.2.4",
     "npm": "^6.5.0",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.1.0",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.3",
     "zone.js": "^0.8.26"
