Revised token service query

--- a/WebApps/AngularSPA/Client/package.json
+++ b/WebApps/AngularSPA/Client/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.11",
     "ngrx-store-freeze": "^0.2.4",
     "npm": "^6.5.0",
+    "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.0",
     "rxjs": "^6.3.3",
@@ -50,7 +51,6 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^10.12.18",
     "@types/yargs": "^12.0.5",
-    "bootstrap": "^4.2.1",
     "codelyzer": "^4.5.0",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
