--- a/WebApps/AngularSPA/Client/angular.json
+++ b/WebApps/AngularSPA/Client/angular.json
@@ -23,8 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/primeflex/primeflex.css"
+              "src/styles.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
