--- a/WebApps/AngularSPA/Client/package.json
+++ b/WebApps/AngularSPA/Client/package.json
@@ -28,6 +28,7 @@
     "@ngrx/router-store": "^7.0.0",
     "@ngrx/store": "^7.0.0",
     "@types/lodash": "^4.14.119",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^2.2.0",
