--- a/Services/Personnel/Personnel.Api/Personnel.Api.csproj
+++ b/Services/Personnel/Personnel.Api/Personnel.Api.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
     <PackageReference Include="MySql.Data" Version="8.0.15" />
     <PackageReference Include="Polly" Version="7.1.0" />
     <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
