Implemented job application withdraw functionality

--- a/Services/Personnel/Personnel.Api/Dockerfile
+++ b/Services/Personnel/Personnel.Api/Dockerfile
@@ -6,13 +6,13 @@ ENV ASPNETCORE_URLS http://*:80
 FROM microsoft/dotnet:2.2-sdk AS build
 WORKDIR /src
 COPY . .
-WORKDIR /src/Services/Personnel/Personnel.Api
-RUN dotnet build PersonnelApi.csproj -c Release -o /app
+WORKDIR "/src/Services/Personnel/Personnel.Api"
+RUN dotnet build "Personnel.Api.csproj" -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish PersonnelApi.csproj -c Release -o /app
+RUN dotnet publish "Personnel.Api.csproj" -c Release -o /app
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "PersonnelApi.dll"]
+ENTRYPOINT ["dotnet", "Personnel.Api.dll"]
