--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,6 +8,7 @@ services:
         EventBusConnection: rabbitmq
         EventBusUserName: ${EVENT_BUS_USERNAME}
         EventBusPassword: ${EVENT_BUS_PASSWORD}
+        EventBusQueueName: DatabasesUniversity
         Secret: ${SHARED_SECRET}
         AngularSpa: http://localhost:5002
     volumes:
@@ -22,6 +23,10 @@ services:
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       ConnectionString: Server=mysql; Database=db; Uid=user; Pwd=12345;
+      EventBusConnection: rabbitmq
+      EventBusUserName: ${EVENT_BUS_USERNAME}
+      EventBusPassword: ${EVENT_BUS_PASSWORD}
+      EventBusQueueName: DatabasesUniversity
       Secret: ${SHARED_SECRET}
       AngularSpa: http://localhost:5002
 
@@ -39,7 +44,6 @@ services:
         AuthApi: http://localhost:5004
     volumes:
       - ./WebApps/AngularSPA/Client:/usr/src/app
-      - /usr/src/app/node_modules
     ports:
       - '4200:4200'
       - '9876:9876'
